--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -8,8 +8,8 @@
     padding: .5rem;
     width: 100%;
     z-index: 5;
-    backdrop-filter: blur( 60px );
-    -webkit-backdrop-filter: blur( 20px );
+    backdrop-filter: blur( 5px );
+    -webkit-backdrop-filter: blur( 5px );
     box-shadow: #6363634d 0px 2px 8px 0px;
 }
 
@@ -26,8 +26,8 @@
     letter-spacing: 1px;
     letter-spacing: -3px;
     font-size: 2.8rem;
-    animation: titleAnimation 5s infinite alternate ease-in-out;
-    -webkit-animation: titleAnimation 5s infinite alternate ease-in-out;
+    animation: titleAnimation 15s infinite alternate ease-in-out;
+    -webkit-animation: titleAnimation 15s infinite alternate ease-in-out;
 }
 
 @keyframes titleAnimation {
@@ -35,8 +35,12 @@
         background-position: top;
     }
 
+    50% {
+        background-position: bottom;
+    }
+
     100% {
-        background-position: left;
+        background-position: top;
     }
 }
 
@@ -64,6 +68,7 @@
 }
 
 .icons span {
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,7 +80,6 @@
     -moz-transition: all .3s;
     -ms-transition: all .3s;
     -o-transition: all .3s;
-    /* padding: .5rem; */
     width: 3rem;
     height: 3rem;
     background-color: #000;
@@ -94,6 +98,7 @@
 /*! dark and light mode switch toggle */
 
 .themeSwitch {
+    cursor: pointer;
     width: 5rem;
     height: 2rem;
     display: flex;
@@ -101,10 +106,10 @@
     align-items: center;
 }
 
-.themeSwitchToggleLight, .themeSwitchToggleDark {
+.themeSwitchToggle {
     position: relative;
-    width: 3rem;
-    height: 1.5rem;
+    width: 4rem;
+    height: 2rem;
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
@@ -115,14 +120,7 @@
     -moz-transition: all .2s;
     -ms-transition: all .2s;
     -o-transition: all .2s;
-}
-
-.themeSwitchToggleLight {
-    background-color: #000;
-}
-
-.themeSwitchToggleDark {
-    background-color: #fff;
+    background-color: var(--Toggle-bgcolor);
 }
 
 .lightToggle {
@@ -131,15 +129,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 1.8rem;
-    height: 1.8rem;
+    width: 2.2rem;
+    height: 2.2rem;
     background-color: rgb(92, 92, 92);
     clip-path: circle();
-    transform: translate(70%, -50%);
-    -webkit-transform: translate(70%, -50%);
-    -moz-transform: translate(70%, -50%);
-    -ms-transform: translate(70%, -50%);
-    -o-transform: translate(70%, -50%);
+    transform: translate(80%, -50%);
+    -webkit-transform: translate(80%, -50%);
+    -moz-transform: translate(80%, -50%);
+    -ms-transform: translate(80%, -50%);
+    -o-transform: translate(80%, -50%);
     transition: all .3s;
     -webkit-transition: all .3s;
     -moz-transition: all .3s;
@@ -153,8 +151,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 1.8rem;
-    height: 1.8rem;
+    width: 2.2rem;
+    height: 2.2rem;
     background-color: rgb(92, 92, 92);
     clip-path: circle();
     transform: translate(0, -50%);
@@ -172,7 +170,7 @@
 .iconLight, .iconDark, .iconDarkActive, .iconLightActive {
     position: absolute;
     color: #fff;
-    font-size: 1.8rem;
+    font-size: 2.2rem;
     transition: all .5s;
     -webkit-transition: all .5s;
     -moz-transition: all .5s;
