--- a/src/components/HomePage.module.css
+++ b/src/components/HomePage.module.css
@@ -1,7 +1,63 @@
 .homePage {
-    display: flex;
-    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 3rem 3rem;
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 10px );
+    box-shadow: #6363634d 0px 2px 8px 0px;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    text-align: center;
+    display: grid;
+    justify-items: center;
     align-items: center;
-    margin: auto;
-    height: 100vh;
+    grid-template-columns: repeat(2, 20rem);
+}
+
+.homePage button {
+    width: 8rem;
+    height: 4rem;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    border: none;
+    margin: 1rem 0;
+    font-size: 1.5rem;
+    background-color: #0084ff;
+    cursor: pointer;
+    transition: all .3s;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -ms-transition: all .3s;
+    -o-transition: all .3s;
+}
+
+.homePage button:hover {
+    background-color: #0084ff2a;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+}
+
+.homePage button:disabled {
+    background-color: #1f1f1f;
+    cursor: not-allowed;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
 }
