--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,5 +1,4 @@
 .navbar {
-    position: absolute;
     top: 0;
     text-align: center;
     display: flex;
@@ -10,12 +9,17 @@
     z-index: 5;
     backdrop-filter: blur( 5px );
     -webkit-backdrop-filter: blur( 5px );
-    box-shadow: #6363634d 0px 2px 8px 0px;
+    box-shadow: #6363634d 0 1px 0 0;
 }
 
 
 
 /* ! navbar title */
+
+.navbarTitle {
+    display: flex;
+    align-items: center;
+}
 
 .navbar h1 {
     background-image: url("../assets/Images/architecture-backyard-boating-534171.jpg");
@@ -38,7 +42,7 @@
     50% {
         background-position: bottom;
     }
-
+    
     100% {
         background-position: top;
     }
@@ -46,6 +50,7 @@
 
 .navbar h1 span {
     letter-spacing: -4px;
+    padding: 0 .2rem;
 }
 
 
@@ -53,18 +58,10 @@
 /* ! navbar home and profile icons */
 
 .icons {
-    height: 100%;
-    position: absolute;
-    left: 20rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 50%;
-    transform: translate(0, -50%);
-    -webkit-transform: translate(0, -50%);
-    -moz-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    -o-transform: translate(0, -50%);
+    margin-left: 2rem;
 }
 
 .icons span {
@@ -72,7 +69,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto .5rem;
+    margin: auto .2rem;
     font-size: 2rem;
     clip-path: circle();
     transition: all .3s;
@@ -82,7 +79,8 @@
     -o-transition: all .3s;
     width: 3rem;
     height: 3rem;
-    background-color: #000;
+    color: var(--navbar-icons-color);
+    background-color: var(--navbar-icons-bgcolor);
 }
 
 .icons span:hover {
@@ -133,11 +131,11 @@
     height: 2.2rem;
     background-color: rgb(92, 92, 92);
     clip-path: circle();
-    transform: translate(80%, -50%);
-    -webkit-transform: translate(80%, -50%);
-    -moz-transform: translate(80%, -50%);
-    -ms-transform: translate(80%, -50%);
-    -o-transform: translate(80%, -50%);
+    transform: translate(90%, -50%);
+    -webkit-transform: translate(90%, -50%);
+    -moz-transform: translate(90%, -50%);
+    -ms-transform: translate(90%, -50%);
+    -o-transform: translate(90%, -50%);
     transition: all .3s;
     -webkit-transition: all .3s;
     -moz-transition: all .3s;
@@ -185,4 +183,11 @@
 
 .iconLight, .iconDark {
     opacity: 0;
+}
+
+
+
+/* ! reponsive */
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
 }
