--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,21 @@
 [data-theme="dark"]{
     --background-color: #000000cc;
     --Toggle-bgcolor: #fff;
+    --scroll-color: dark;
+    --navbar-icons-bgcolor: #000;
+    --navbar-icons-color: #fff;
 }
 
 [data-theme="light"]{
     --background-color: #000000cc;
     --Toggle-bgcolor: #fff;
+    --scroll-color: light;
+    --navbar-icons-bgcolor: #fff;
+    --navbar-icons-color: #000;
+}
+
+:root {
+    color-scheme: var(--scroll-color);
 }
 
 * {
@@ -15,8 +25,8 @@
 }
 
 html {
-    font-size: calc(60% + 0.8vmin);
-    overflow-x: hidden;
+    font-size: calc(60% + .8vmin);
+    overflow: hidden;
     scroll-behavior: smooth;
     user-select: none;
 }
@@ -27,10 +37,12 @@ body {
     background-image: url("./assets/Images/fahrul-razi-BR6lrzCPYPk-unsplash.jpg");
     background-blend-mode: multiply;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100vw 100ch;
     background-color: var(--background-color);
 }
 
 :any-link {
     color: #fff;
+    text-decoration: none;
+    all: unset;
 }
