--- a/src/components/HomePage.module.css
+++ b/src/components/HomePage.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    padding: 3rem 3rem;
+    padding: 1rem;
     backdrop-filter: blur( 10px );
     -webkit-backdrop-filter: blur( 10px );
     box-shadow: #6363634d 0px 2px 8px 0px;
