--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,193 +1,21 @@
 .navbar {
-    top: 0;
-    text-align: center;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    text-align: center;
     padding: .5rem;
     width: 100%;
     z-index: 5;
-    backdrop-filter: blur( 5px );
-    -webkit-backdrop-filter: blur( 5px );
-    box-shadow: #6363634d 0 1px 0 0;
-}
-
-
-
-/* ! navbar title */
-
-.navbarTitle {
-    display: flex;
-    align-items: center;
+    padding: 2rem;
 }
 
 .navbar h1 {
-    background-image: url("../assets/Images/architecture-backyard-boating-534171.jpg");
-    background-size: cover;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
     letter-spacing: 1px;
     letter-spacing: -3px;
     font-size: 2.8rem;
-    animation: titleAnimation 15s infinite alternate ease-in-out;
-    -webkit-animation: titleAnimation 15s infinite alternate ease-in-out;
-}
-
-@keyframes titleAnimation {
-    0% {
-        background-position: top;
-    }
-
-    50% {
-        background-position: bottom;
-    }
-    
-    100% {
-        background-position: top;
-    }
 }
 
 .navbar h1 span {
     letter-spacing: -4px;
     padding: 0 .2rem;
-}
-
-
-
-/* ! navbar home and profile icons */
-
-.icons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 2rem;
-}
-
-.icons span {
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto .2rem;
-    font-size: 2rem;
-    clip-path: circle();
-    transition: all .3s;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    -ms-transition: all .3s;
-    -o-transition: all .3s;
-    width: 3rem;
-    height: 3rem;
-    color: var(--navbar-icons-color);
-    background-color: var(--navbar-icons-bgcolor);
-}
-
-.icons span:hover {
-    background-color: #555;
-}
-
-.icons span:active {
-    background-color: #aaa;
-}
-
-
-
-/*! dark and light mode switch toggle */
-
-.themeSwitch {
-    cursor: pointer;
-    width: 5rem;
-    height: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.themeSwitchToggle {
-    position: relative;
-    width: 4rem;
-    height: 2rem;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    transition: all .2s;
-    -webkit-transition: all .2s;
-    -moz-transition: all .2s;
-    -ms-transition: all .2s;
-    -o-transition: all .2s;
-    background-color: var(--Toggle-bgcolor);
-}
-
-.lightToggle {
-    position: absolute;
-    top: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 2.2rem;
-    height: 2.2rem;
-    background-color: rgb(92, 92, 92);
-    clip-path: circle();
-    transform: translate(90%, -50%);
-    -webkit-transform: translate(90%, -50%);
-    -moz-transform: translate(90%, -50%);
-    -ms-transform: translate(90%, -50%);
-    -o-transform: translate(90%, -50%);
-    transition: all .3s;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    -ms-transition: all .3s;
-    -o-transition: all .3s;
-}
-
-.darkToggle {
-    position: absolute;
-    top: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 2.2rem;
-    height: 2.2rem;
-    background-color: rgb(92, 92, 92);
-    clip-path: circle();
-    transform: translate(0, -50%);
-    -webkit-transform: translate(0, -50%);
-    -moz-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    -o-transform: translate(0, -50%);
-    transition: all .3s;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    -ms-transition: all .3s;
-    -o-transition: all .3s;
-}
-
-.iconLight, .iconDark, .iconDarkActive, .iconLightActive {
-    position: absolute;
-    color: #fff;
-    font-size: 2.2rem;
-    transition: all .5s;
-    -webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    -ms-transition: all .5s;
-    -o-transition: all .5s;
-    opacity: 0;
-}
-
-.iconLightActive, .iconDarkActive {
-    opacity: 1;
-}
-
-.iconLight, .iconDark {
-    opacity: 0;
-}
-
-
-
-/* ! reponsive */
-
-@media only screen and (min-width: 320px) and (max-width: 480px) {
 }
