--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,4 +1,5 @@
 .navbar {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,6 +8,7 @@
     width: 100%;
     z-index: 5;
     padding: 2rem;
+    background-color: rgba(255, 255, 255, 0.146);
 }
 
 .navbar h1 {
@@ -18,4 +20,64 @@
 .navbar h1 span {
     letter-spacing: -4px;
     padding: 0 .2rem;
+}
+
+.backBtnOff {
+    opacity: 0;
+}
+
+.backBtn {
+    position: absolute;
+    top: 50%;
+    left: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    cursor: pointer;
+    padding: .4rem;
+    width: fit-content;
+    transition: all .6s;
+    -webkit-transition: all .6s;
+    -moz-transition: all .6s;
+    -ms-transition: all .6s;
+    -o-transition: all .6s;
+    transform: translate(0, -50%);
+    -webkit-transform: translate(0, -50%);
+    -moz-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    -o-transform: translate(0, -50%);
+}
+
+.backBtn span, .backBtn i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+    margin-right: 1rem;
+    transition: all .3s;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -ms-transition: all .3s;
+    -o-transition: all .3s;
+}
+
+.backBtn span {
+    position: relative;
+    left: -5rem;
+    opacity: 0;
+    font-size: 1.5rem;
+}
+
+.backBtn:hover span {
+    left: 0;
+    opacity: 1;
+}
+
+.backBtn:hover {
+    background-color: #151515;
 }
